public/css/style.css
html,
body {
    margin:0;
    padding:0;
    height:100%;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;

}

.main {
    background: -moz-linear-gradient(top, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.5) 100%), url('/img/2.jpg') repeat 0 0;
    background: -webkit-linear-gradient(top, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 100%), url('/img/2.jpg') repeat 0 0;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.5)), color-stop(100%,rgba(255,255,255,0.7))), url('/img/2.jpg') repeat 0 0;
    background: -o-linear-gradient(top, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 100%), url('/img/2.jpg') repeat 0 0;
    background: -ms-linear-gradient(top, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 100%), url('/img/2.jpg') repeat 0 0;
    background: linear-gradient(to bottom, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 100%), url('/img/2.jpg') repeat 0 0;
}

nav, footer {
    width:100%;
    height:60px;
    background: #6f6f6f;
}
footer {
    position:absolute;
    bottom:0;
    color: white;


}
.count_field, .result_field {

    /*width: 100%;*/
    /*height: 100%;*/
    /*position: fixed;*/
    /*top: 0;*/
    /*left: 0;*/
    /*display: flex;*/
    /*align-items: center;*/
    /*align-content: center;*/
    /*justify-content: center;*/
    /*overflow: auto;*/
}

.logo {
    margin:0 15px;
}
a {
    text-decoration: none;
}
.alert {
    width:100%;
    height: 20 px;
    background-color: rgba(139, 37, 32, 0.33);
    padding: 10px;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    margin: 5px 0;
}
.inner_count, .inner_result {
    margin-left: auto;
    margin-right: auto;
    margin-top:40px;
    width: 45%;
    background: #555;
    padding: 20px 30px 20px 30px;
    color: #D3D3D3;
    text-shadow: 1px 1px 1px #444;
    border: none;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
}
 h1 {
    padding: 0px 0px 10px 40px;
    display: block;
    border-bottom: 1px solid #444;
    margin: -10px -30px 30px -30px;
}
 h1>span {
    display: block;
    font-size: 0.5em;
}
label {
    display: block;
    margin: 0px 0px 5px;
}
label>span {
    float: left;
    width: 50%;
    text-align: right;
    padding-right: 10px;
    margin-top: 10px;
    font-weight: bold;

}
.inner_count input[type='number'] {
    border: none;
    color: #525252;
    height: 25px;
    line-height:15px;
    margin-bottom: 16px;
    margin-right: 6px;
    margin-top: 2px;
    outline: 0 none;
    padding: 5px 0px 5px 5px;
    width: 40%;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    background: #DFDFDF;
}

.btn {
    background: #FFCC02;
    border: none;
    padding: 10px 25px 10px 25px;
    color: #585858;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    text-shadow: 1px 1px 1px #FFE477;
    font-weight: bold;
    box-shadow: 1px 1px 1px #3D3D3D;
    -webkit-box-shadow:1px 1px 1px #3D3D3D;
    -moz-box-shadow:1px 1px 1px #3D3D3D;
}
 .btn:hover {
    color: #333;
    background-color: #EBEBEB;
}
@media only screen
and (min-device-width: 375px)
and (max-device-width: 667px)
and (-webkit-min-device-pixel-ratio: 2) {
header, footer{
    display: none;
}
    .inner_count, .inner_result{
        width: 100%;
    }
}

